name:                stern-brocot-tree
version:             0.1.0.0
synopsis:            The n-dimensional Stern-Brocot tree
description:         Utilities for constructing and querying the n-dimensional S-B tree
homepage:            https://github.com/kitharoidos/stern-brocot-tree#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Hadrava
maintainer:          mihadra@gmail.com
copyright:           Copyright: (c) 2016 Michal Hadrava
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.SternBrocotTree
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , algebraic-graphs
                     , vector
                     , extensible-effects
                     , monad-loops
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kitharoidos/stern-brocot-tree
