name:                stern-brocot-tree
version:             0.1.0.0
synopsis:            The n-dimensional Stern-Brocot tree
description:         Utilities for constructing and querying the n-dimensional S-B tree
homepage:            https://github.com/kitharoidos/stern-brocot-tree#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Hadrava
maintainer:          mihadra@gmail.com
copyright:           Copyright: (c) 2016 Michal Hadrava
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Math.SternBrocotTree
    build-depends:       base >= 4.7 && < 5
                       , linear
                       , algebraic-graphs
                       , vector
                       , freer-effects
                       , monad-loops
    default-language:    Haskell2010

test-suite test
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    main-is:             Tests.hs
    build-depends:       base >= 4.7 && < 5
                       , algebraic-graphs
                       , tasty
                       , tasty-hspec
                       , linear
                       , stern-brocot-tree

source-repository head
  type:     git
  location: https://github.com/kitharoidos/stern-brocot-tree
