name:                stern-brocot-tree
version:             0.1.0.0
synopsis:            The n-dimensional Stern-Brocot tree
description:         Branch-wise and generation-wise construction of the n-dimensional Stern-Brocot tree
homepage:            https://github.com/kitharoidos/stern-brocot-tree#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Hadrava
maintainer:          mihadra@gmail.com
copyright:           Copyright: (c) 2017 Michal Hadrava
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Math.SternBrocotTree
    build-depends:       base >= 4.7 && < 5
                       , linear == 1.20.*
                       , algebraic-graphs == 0.0.*
                       , vector == 0.12.*
                       , freer-effects == 0.3.*
                       , monad-loops == 0.4.*
                       , positive == 0.4.*
    default-language:    Haskell2010

test-suite test
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    main-is:             Tests.hs
    build-depends:       base >= 4.7 && < 5
                       , algebraic-graphs == 0.0.*
                       , tasty == 0.11.*
                       , tasty-hspec == 1.1.*
                       , linear == 1.20.*
                       , positive == 0.4.*
                       , stern-brocot-tree

source-repository head
  type:     git
  location: https://github.com/kitharoidos/stern-brocot-tree
